CTT_Package/objects/Maven_Staging_Table__c.object
<CustomObject>
    <fields>
        <fullName>Abdominal_Pain__c</fullName>
        <label>Abdominal Pain</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Hospitalized__c</fullName>
        <label>Case Hospitalized</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Value1</fullName>
                    <isActive>false</isActive>
                    <label>Value1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Chills__c</fullName>
        <label>Chills</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Value1</fullName>
                    <isActive>false</isActive>
                    <label>Value1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Complications__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Clinical Complications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cough_Onset_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cough Onset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cough__c</fullName>
        <label>Cough</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Value1</fullName>
                    <isActive>false</isActive>
                    <label>Value1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Discharged_String__c</fullName>
        <description>String version of Date Discharged to use for import so we can handle comma-separated values</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Discharged String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Discharged__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Discharged</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Hospitalized_String__c</fullName>
        <description>String version of Date Discharged to use for import so we can handle comma-separated values</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Hospitalized String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Hospitalized__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Hospitalized</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Death__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diarrhea__c</fullName>
        <label>Diarrhea</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Value1</fullName>
                    <isActive>false</isActive>
                    <label>Value1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Difficulty_Breathing__c</fullName>
        <label>Difficulty Breathing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Value1</fullName>
                    <isActive>false</isActive>
                    <label>Value1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disease_Status__c</fullName>
        <label>Disease Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Value1</fullName>
                    <isActive>false</isActive>
                    <label>Value1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employed_or_Admitted_Admitted_Healthcare__c</fullName>
        <label>Employed or Admitted Admitted Healthcare</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employed_or_Admitted_Care_Location__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employed or Admitted Care Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employed_or_Admitted_Healthcare__c</fullName>
        <label>Employed or Admitted Healthcare</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employed_or_Admitted_Loc_Type_String__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employed or Admitted Loc Type String</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employed_or_Admitted_Location_Type__c</fullName>
        <label>Employed or Admitted Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Facility_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employed_or_Admitted_Other_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employed or Admitted Other Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employer_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exposed_Others_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exposed Others Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exposed_Others__c</fullName>
        <label>Exposed Others</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Exposure_Locations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exposure_Source_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exposure Source Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exposure_Source__c</fullName>
        <label>Exposure Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Exposure_Locations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fever_Duration__c</fullName>
        <description>Fever Duration Days</description>
        <inlineHelpText>Fever Duration Days</inlineHelpText>
        <label>Fever Duration</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fever_Onset_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fever Onset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fever_Temperature_Unit__c</fullName>
        <label>Fever Temperature Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Celsius</fullName>
                </value>
                <value>
                    <fullName>FARENHEIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fever_Temperature__c</fullName>
        <label>Fever Temperature</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fever__c</fullName>
        <label>Fever</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Value1</fullName>
                    <isActive>false</isActive>
                    <label>Value1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Monitoring_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Monitoring Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Decline to Specify</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Headache__c</fullName>
        <label>Headache</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Value1</fullName>
                    <isActive>false</isActive>
                    <label>Value1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Healthcare_Worker__c</fullName>
        <label>Healthcare Worker</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hispanic__c</fullName>
        <label>Hispanic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Value1</fullName>
                    <isActive>false</isActive>
                    <label>Value1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hospital_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hospital Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Reference_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hospital Reference Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICU_Admission_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ICU Admission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ICU_Admission__c</fullName>
        <label>ICU Admission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Value1</fullName>
                    <isActive>false</isActive>
                    <label>Value1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ICU_Discharge_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ICU Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Trigger_New__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks to see if a record has just been added to the staging table. This will allow the batch class to recognize records currently in trigger.new</description>
        <label>New Staging Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Investigation_Status_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Investigation Status Other</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Investigation_Status__c</fullName>
        <label>Investigation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Investigation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investigator_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Investigator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigator_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Investigator Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HealthCloudGA__Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Exposure_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Exposure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Monitoring_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Monitoring Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Death_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location of Death Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Death__c</fullName>
        <label>Location of Death</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Location_of_Death</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maven_Contact_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Maven Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maven_Exposing_Contact_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Maven Exposing Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Muscle_Aches_Pains__c</fullName>
        <label>Muscle Aches Pains</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Value1</fullName>
                    <isActive>false</isActive>
                    <label>Value1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_of_Kin_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next of Kin Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_of_Kin_Phone__c</fullName>
        <description>Emergency Contact Phone:</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Emergency Contact Phone:</inlineHelpText>
        <label>Next of Kin Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Next_of_Kin__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next of Kin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_Facility_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Facility Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_Facility_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Facility City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_Facility_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Facility: Other</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_Facility_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Facility Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ordering_Facility_Reference_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Facility Reference Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_Facility_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Facility State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_Facility__c</fullName>
        <description>CLIA</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_Provider_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Provider Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_Provider_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Provider City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_Provider_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Provider Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_Provider_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Provider Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ordering_Provider_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Provider State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Clinical_Complications__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Clinical Complications</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Hospital_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Hospital Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Occupation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Symptoms__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Symptoms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Outcome</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pregnancy_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pregnancy Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race_String__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Race String</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Race</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Redcap_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Redcap Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sore_Throat__c</fullName>
        <label>Sore Throat</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Value1</fullName>
                    <isActive>false</isActive>
                    <label>Value1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Data successfully processed</description>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Symptom_Onset_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Symptom Onset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Symptom_Resolution_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Symptom Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Symptoms__c</fullName>
        <label>Symptoms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Value1</fullName>
                    <isActive>false</isActive>
                    <label>Value1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Name__c</fullName>
        <description>Tests: Test</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Result_Status__c</fullName>
        <label>Test Result Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test Pending</fullName>
                </value>
                <value>
                    <fullName>Test Result Pending</fullName>
                </value>
                <value>
                    <fullName>Test Positive</fullName>
                </value>
                <value>
                    <fullName>Test Negative</fullName>
                </value>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Inconclusive</fullName>
                </value>
                <value>
                    <fullName>Detected</fullName>
                </value>
                <value>
                    <fullName>Value1</fullName>
                    <isActive>false</isActive>
                    <label>Value1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Taken_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Taken Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Underlying_Illness_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Underlying Illness Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Underlying_Illness_Specify_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Underlying Illness Specify Other</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Underlying_Illness_Specify_String__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Underlying Illness Specify String</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underlying_Illness_Specify__c</fullName>
        <label>Underlying Illness Specify</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Underlying_Illness</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underlying_Illness__c</fullName>
        <label>Underlying Illness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Value1</fullName>
                    <isActive>false</isActive>
                    <label>Value1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>